welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: illegal start of simple expression
move(var nbPas:Int , var verssLAvant:Boolean)
     ^Program:13: error: ')' expected but '}' found.
}
^